fixed tweet box to have even spacing

--- a/public/styles/text-tweet.css
+++ b/public/styles/text-tweet.css
@@ -1,7 +1,6 @@
 .container{
   width: 77%;
   margin-top: 10%;
-  margin-bottom: 10%;
 }
 
 /* Alert */
@@ -59,7 +58,6 @@
   border-width:0;
   color:gray;
   background-color:gray;
-  margin-top: 10px;
 }
 
 .icon:hover{
@@ -68,7 +66,7 @@
 }
 
 .text{
-  margin:0 2em ;
+  margin: 1em ;
   word-wrap: break-word; 
 }
 
